# Capybara3D

./: .gitignore  CMakeLists.txt  CMakeSettings.json  macro.cmake
inc/Capybara3D/: Camera.h  Canvas.h  Component.h  Object.h  ObjectBase.h  Scene.h  Transform.h
inc/ToppleTheTower/: Actor.h  All.h  Collision.h  Common.h  Director.h  Object.h
inc/Utility/: Export.h  Singleton.h  Timer.h
inc/glad/: glad.h
inc/tools/: filesystem.h
src/: CMakeLists.txt
src/Capybara3D/: CMakeLists.txt  Camera.cpp  Canvas.cpp  Capybara3D.cpp  Object.cpp  ObjectBase.cpp  Scene.cpp  glad.c  main.cpp  stb_image.cpp
src/ToppleTheTower/: CMakeLists.txt  Director.cpp  main.cpp
src/ToppleTheTowerDraw/: CMakeLists.txt  main.cpp
src/Utility/: CMakeLists.txt  Timer.cpp
